--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="yuri_gagrin">Yuri Gagrin</string>
     <string name="rajnikant">Rajnikant</string>
     <string name="bill_gates">Bill Gates</string>
+    <string name="yuri_gagarin">Yuri Gagarin</string>
 </resources>
